[package]
name = "lhef"
version = "0.3.2"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
edition = "2018"
description = "Read and write files in the Les Houches Event File format"
readme = "Readme.md"
license = "GPL-3.0-or-later"
keywords = ["physics", "parser"]
categories = ["science", "parser-implementations"]
repository = "https://github.com/a-maier/lhef"

[dependencies]
xmltree = "0.9"
itertools = "0.9"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
flate2 = "1.0"
