[package]
name = "lhef"
version = "0.4.0"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
edition = "2021"
description = "Read and write files in the Les Houches Event File format"
readme = "Readme.md"
license = "GPL-3.0-or-later"
keywords = ["physics", "parser"]
categories = ["science", "parser-implementations"]
repository = "https://github.com/a-maier/lhef"

[dependencies]
xmltree = "0.9"
itertools = "0.10"
serde = { version = "1.0", optional = true, features = ["derive"] }
fast-float = "0.2"
ryu = "1.0"
thiserror = "1.0"

[dev-dependencies]
flate2 = "1.0"
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false
